--- a/metadoc-js/src/main/resources/index.html
+++ b/metadoc-js/src/main/resources/index.html
@@ -14,6 +14,16 @@
           <span class="mdc-toolbar__title" id="title">Metadoc</span>
         </section>
       </div>
+      <div role="progressbar" class="mdc-linear-progress">
+        <div class="mdc-linear-progress__buffering-dots"></div>
+        <div class="mdc-linear-progress__buffer"></div>
+        <div class="mdc-linear-progress__bar mdc-linear-progress__primary-bar">
+          <span class="mdc-linear-progress__bar-inner"></span>
+        </div>
+        <div class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar">
+          <span class="mdc-linear-progress__bar-inner"></span>
+        </div>
+      </div>
     </header>
     <aside class="mdc-temporary-drawer" data-mdc-auto-init="MDCTemporaryDrawer">
       <nav class="mdc-temporary-drawer__drawer">
@@ -40,7 +50,7 @@
       </nav>
     </aside>
     <main class="mdc-toolbar-fixed-adjust">
-      <div id="editor">Loading ..</div>
+      <div id="editor"></div>
     </main>
   </body>
 </html>
